# chainsaddiction

./: .gitignore  .gitlab-ci.yml  .gitmodules  .hmmcore.c.swp  .linalg.c.swp  .read.c.swp  .readthedocs.yml  .test_fwbw.c.swp  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  Untitled.ipynb  a.out  alloc.c  alloc.h  em  fwbw.c  fwbw.h  hmmcore.c  hmmcore.h  linalg.c  linalg.h  linalg.h.gch  makefile  pyproject.toml  read.c  requirements-dev.txt  setup.cfg  setup.py  stats.c  stats.h  tes.c  test  test.c  test.py  test_core  test_core.c  test_fwbw  (+5 more)
.github/workflows/: build-linux.yml  build-macos.yml  build-manylinux.yml  build-windows.yml  build.yaml  build.yml  release.yml  test.yml
chains_addiction/: em.c  hmm_module.c  utilities.c
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py  getting-started.rst  index.rst  install.rst
docs/source/api/: index.rst
docs/source/api/c/: dataset.rst  index.rst  internal.rst  utils.rst
docs/source/api/python/: index.rst  poishmm.rst  utils.rst
docs/source/c-api/: basics.rst  overview.rst  pois-hmm.rst  pois-params.rst  pois-probs.rst
docs/source/userguide/: index.rst
docs/source/usrguide/: examples.rst
hmm/: .em.c.swp  .hmm_utilities.c.swp  em.c  fwbw.c  hmm.c  hmm_module.bckp.c  hmm_module.c  hmm_utilities.c  matrix.c  stats.c
include/: bw.h  chainsaddiction.h  em.h  fwbw.h  hmm.h  hmm_module.h  libma.h  libvmath.h  matrix.h  restrict.h  stats.h  utilities.h  vmath.h
py/: .test.py.swp  apollon  setup.py  test.py
src/chainsaddiction/: Makefile  bw.c  bw.h  chainsaddiction.h  dataset.c  dataset.h  em.c  err.h  fwbw.c  fwbw.h  hmm.c  hmm.h  hmm_module.c  hmm_module.h  libma.c  libma.h  poishmm.c  poishmm.h  read.c  read.h  rnd.c  rnd.h  scalar.h  stats.c  stats.h  typing.py  utilities.c  utils.h  vmath.c  vmath.h
src/chainsaddiction/poishmm/: Makefile  __init__.pyi  fitobject.h  pois-em.c  pois-em.h  pois-fwbw.c  pois-fwbw.h  pois-hmm.c  pois-hmm.h  pois-params.c  pois-params.h  pois-probs.c  pois-probs.h  pois-utils.c  pois-utils.h  pois_bw.c  pois_bw.h  pois_em.c  pois_em.h  pois_fwbw.c  pois_fwbw.h  pois_hmm.c  pois_hmm.h  pois_params.c  pois_params.h  pois_probs.c  pois_probs.h  pois_utils.c  pois_utils.h  poishmm-module.c  poishmm-module.h  poishmm-object.h  poishmm.h  poishmm_module.c  poishmm_module.h  poishmm_object.h
src/chainsaddiction/poishmm/tests/: Makefile  run.c  runtest.c  test-pois-em.c  test-pois-em.h  test-pois-hmm.c  test-pois-hmm.h  test-pois-params.c  test-pois-params.h  test-pois-probs.c  test-pois-probs.h  test-pois-utils.c  test_pois_em.c  test_pois_em.h  test_pois_hmm.c  test_pois_hmm.h  test_pois_params.c  test_pois_params.h  test_pois_probs.c  test_pois_probs.h  test_pois_utils.c  test_pois_utils.h  test_poishmm.c  test_poishmm.h  unittest.h
src/chainsaddiction/tests/: Makefile  runtest.c  test-dataset.c  test-dataset.h  test-read.c  test-read.h
src/chainsaddiction/utils/: Makefile  __init__.pyi  utils-module.c  utils-module.h  utils.c  utils.h
src/chainsaddiction/utils/tests/: Makefile  runtest.c  test-utils.c  test-utils.h
src/vmath/: Makefile  alloc.h  config.h  core.c  core.h  print.h  rnd.c  rnd.h  stats.c  stats.h  vmath.c  vmath.h
src/vmath/tests/: Makefile  runtest.c  test_core.c  test_core.h  test_rnd.c  test_rnd.h  test_stats.c  test_stats.h  test_vmath.c  test_vmath.h
tests/: Makefile  README  build_test_em.sh  build_test_em2.sh  build_test_fwbw.sh  build_test_hmm.sh  build_test_matrix.sh  build_test_stats.sh  makefile  py_em_test.py  test-decoding.py  test-ext-earthquakes.py  test-ext-module.py  test-global-decoding.py  test-local-decoding.py  test-utils.py  test_em  test_em.py  test_fwbw  test_hmm.py  test_matrix  test_stats  utils.py
tests/data/: S4_N100  S4_N500  S4_N50_MID  centroids  earthquakes  earthquakes_short  eq-lcxpt  params_2s  params_3s  params_4s  params_4s_MID  test_15_100_50.txt  wrong_format
tests/data/centroids/2s/: gamma.txt  init-gamma.txt  init-lambda.txt  lalpha.txt  lambda.txt  lbeta.txt  lcsp.txt  local-decoding.txt
tests/data/centroids/3s/: gamma.txt  global-decoding.txt  init-delta.txt  lalpha.txt  lambda.txt  lbeta.txt  lcsp.txt  local-decoding.txt
tests/data/centroids/4s/: delta.txt  gamma.txt  global-decoding.txt  lalpha.txt  lambda.txt  lbeta.txt  lcsp.txt  local-decoding.txt
tests/data/centroids/5s/: delta.txt  gamma.txt  global-decoding.txt  (+5 more)
tests/data/earthquakes/: earthquakes
tests/include/: test_bw.h  test_stats.h  test_vmath.h  unittest.h
tests/params/: params-4s
tests/src/: .test_em.c.swp  .test_em2.c.swp  run  run_test_bw.c  run_test_hmm.c  run_test_rnd.c  run_test_stats.c  run_test_vmath.c  test.c  test_bw.c  test_bw.h  test_dataset.c  test_dataset.h  test_em.c  test_em2.c  test_fwbw.c  test_fwbw.h  test_hmm.c  test_hmm.h  test_matrix.c  test_poishmm.c  test_poishmm.h  test_read.h  test_rnd.c  test_stats.c  test_utilities.c  test_utilities.h  test_vmath.c  test_vmath.h  unittest.h  viterbi.c
(+62 files in other folders)
