[project]
name = "chainsaddiction"
version = "0.2.5-dev0"
authors = [{name = "Michael Blaß", email = "mblass@posteo.net"}]
description = "HMM with Poisson-distributed latent variables."
keywords = ["hmm", "poisson", "hidden-markov model"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Information Technology"
]
dependencies = [
	"numpy",
]

[project.urls]
Repository = "https://github.com/teagum/chainsaddiction"
Documentation = "https://chainsaddiction.rtfd.org"

[build-system]
requires = ["setuptools", "setuptools-scm", "numpy"]
build-backend = "setuptools.build_meta"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
strict = true
