[metadata]
name = chains_addiction
version = 0.1.1
description = HMM with Poisson-distributed latent variables.
long_description = file: README.md
license = BSD-3-Clause
author = Michael Blaß
author_email = michael.blass@uni-hamburg.de
keywords = hmm, poisson
classifiers = 
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: Implementation :: CPython
        Topic :: Scientific/Engineering
        Intended Audience :: Science/Research	

[options]
python_requires >= '3.5'
