[metadata]
name = chainsaddiction
version = 0.1.1
description = HMM with Poisson-distributed latent variables.
long_description = file: README.md
license = BSD-3-Clause
author = Michael Blaß
author_email = mblass@posteo.net
keywords = hmm, poisson, hidden-markov model
classifiers = 
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: Implementation :: CPython
        Topic :: Scientific/Engineering
        Intended Audience :: Science/Research	

[options]
zip_safe = False
python_requires >= '3.7'
package_dir =
        =src
packages = find_namespace:

install_requires =
        numpy

[options.packages.find]
where = src
