[metadata]
name = chainsaddiction
version = 0.1.1
description = HMM with Poisson-distributed latent variables.
long_description = file: README.md
license = BSD-3-Clause
license_file = LICENSE
author = Michael Blaß
author_email = mblass@posteo.net
keywords = hmm, poisson, hidden-markov model
url = 'https://github.com/teagum/chainsaddiction'
project_urls =
	Source code = 'https://github.com/teagum/chainsaddiction/'
	Bug Tracker = 'https://github.com/teagum/chainsaddiction/issues'

classifiers = 
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology

[options]
zip_safe = False
package_dir =
        =src
packages = find_namespace:

python_requires >= '3.7'
install_requires =
        numpy >= '1.20'

[options.packages.find]
where = src
